# ai-visibility-audit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml  security-scan.yml
api/: .dockerignore  alembic.ini  entrypoint.sh  pyproject.toml  pyrightconfig.json
api/alembic/: env.py
api/alembic/versions/: 253ee575f924_initial_schema.py  a1b2c3d4e5f6_wildchat_corpus_pgvector.py  f1a2b3c4d5e6_add_shopping_results.py
api/app/: config.py  database.py  geo_catalog.py  logging_config.py  main.py  models.py  runtime_config.py  schemas.py  sources.py
api/app/providers/: _brightdata.py  base.py  brightdata_chatgpt.py  brightdata_gemini.py  brightdata_google_ai_mode.py  dataforseo.py
api/app/routes/: analytics.py  brands.py  config.py  demo.py  generator.py  prompts.py  report.py  runs.py  schedule.py  sources.py
api/app/services/: analysis.py  citations.py  corpus.py  corpus_store.py  dataforseo_labs.py  demo_seed.py  metrics.py  pipeline_tracker.py  pricing.py  query_generator.py  run_service.py  scheduler.py  sentiment.py  shopping.py
api/app/services/prompt_generator/: __init__.py  base.py  default.py
api/scripts/: backfill_analyses.py  seed_demo.py  smoke_generate_prompts.py
api/tests/: test_corpus.py  test_demo_seed.py  test_geo_catalog.py  test_prompt_generator.py  test_shopping.py
api/tests/fixtures/: brightdata_chatgpt_shopping.json
docker/: api.Dockerfile  web.Dockerfile
web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/src/: App.vue  main.ts  router.ts  style.css
web/src/api/: client.ts  types.ts
web/src/components/: Donut.vue  FunnelChart.vue  LineChart.vue  ReportConfigDialog.vue  SetupDialog.vue  Sidebar.vue  Sparkline.vue  StatusBadge.vue  Topbar.vue  TopicsSankey.vue
web/src/design/: tokens.ts
(+40 files in other folders)
