[project]
name = "ai-visibility-audit-api"
version = "0.3.1"
description = "AI Visibility Audit API — track brand visibility across AI assistants"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30",
    "alembic>=1.18.5",
    "pydantic-settings>=2.14.2",
    "httpx>=0.28",
    "openai>=2.44.0",
    "exa-py>=2.15.0",
    "pgvector>=0.3",
    "huggingface-hub>=1.21.0",
    "pyarrow>=18",
    "playwright>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
